push and control
moving to main branch

--- a/JavaScript-Functions index.html
+++ b/JavaScript-Functions index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JavaScript Functions</title>
+    <script src="script.js"></script>
+</head>
+<body>
+    <h1>JavaScript Functions Demo</h1>
 
+    <script>
+        // Call the firstLetterName function with a sample name
+        firstLetterName("John");
+
+        // Call the divisibleByTwo function with a sample number
+        var isDivisible = divisibleByTwo(10);
+        console.log("Is 10 divisible by 2? " + isDivisible);
+
+        // Call the largestNum function with a sample array
+        var numbers = [10, 5, 20, 15];
+        var maxNumber = largestNum(numbers);
+        console.log("The largest number in the array is: " + maxNumber);
+    </script>
+</body>
+</html>
